The app will no longer hang when the server is not available.