@@ -16,6 +16,11 @@ title: Version 1.10 > Minor
 This changelog will contain all changes from 1.10.0 onwards before the next major version.
 !!!
 
+==- Version 1.10.27
+Fix UIs and PluginFrames not correctly resetting. This manifested as weird UI bugs after a reload.
+Added a favorites bar.
+Slightly tweaked the plugin manager to make it fit in the frame correctly.
+[!badge variant="dark" text="Tumppi066"] [!badge variant="ghost" text="Main UI"] [!badge variant="ghost" text="Plugin Manager"]
 ==- Version 1.10.26
 The app will no longer hang when the server is not available.
 [!badge variant="dark" text="Tumppi066"] [!badge variant="ghost" text="App Backend"]
