@@ -1,1 +1,3 @@
-The app will no longer hang when the server is not available.
+Fix UIs and PluginFrames not correctly resetting. This manifested as weird UI bugs after a reload.
+Added a favorites bar.
+Slightly tweaked the plugin manager to make it fit in the frame correctly.
